--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body class="<%= params[:action] %>">
+    <ul>
+      <li><%= link_to '日本語', url_for(locale: :ja) %></li>
+      <li><%= link_to 'English', url_for(locale: :en) %></li>
+    </ul>
     <%= yield %>
   </body>
 </html>
