--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,10 @@
-<h1><%= t '.title' %></h1>
+<h1><%= t 'views.books.edit.title' %></h1>
 
 <%= render "form", book: @book %>
 
 <br>
 
-<div>
+<nav class="page-nav">
   <%= link_to show_text, @book %>
   <%= link_to back_text, books_path %>
-</div>
+</nav>
