--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,12 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @book %>
+<div class="show-item">
+  <%= render @book %>
+</div>
 
-<div>
+<nav class="page-nav">
   <%= link_to edit_text, edit_book_path(@book) %>
   <%= link_to back_text, books_path %>
 
   <%= button_to delete_text, @book, method: :delete %>
-</div>
+</nav>
