--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <nav class="page-nav">
-  <%= link_to show_text, @book %>
-  <%= link_to back_text, books_path %>
+  <%= link_to t('view.common.show'), @book %>
+  <%= link_to t('view.common.back'), books_path %>
 </nav>
