--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,12 +7,12 @@
     <div class="index-item">
       <%= render book %>
       <p>
-        <%= link_to show_text, book %>
+        <%= link_to t('view.common.show'), book %>
       </p>
     </div>
   <% end %>
 </div>
 
 <nav class="page-nav">
-  <%= link_to new_text, new_book_path %>
+  <%= link_to t('view.common.new'), new_book_path %>
 </nav>
