--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,8 +5,8 @@
 </div>
 
 <nav class="page-nav">
-  <%= link_to edit_text, edit_book_path(@book) %>
-  <%= link_to back_text, books_path %>
+  <%= link_to t('view.common.edit'), edit_book_path(@book) %>
+  <%= link_to t('view.common.back'), books_path %>
 
-  <%= button_to delete_text, @book, method: :delete %>
+  <%= button_to t('view.common.delete'), @book, method: :delete %>
 </nav>
