add: index-itemに文字の折り返しについてのスタイルを追加
長い英数文字を入力すると折り返しが効かなかったため

--- a/app/assets/stylesheets/scaffolds.css
+++ b/app/assets/stylesheets/scaffolds.css
@@ -178,6 +178,7 @@ Index
   border-radius: var(--global-br);
   display: flex;
   flex-direction: column;
+  overflow-wrap: break-word;
 }
 
 .index-item div[id] {
