change: ユーザー一覧画面をパーシャルを用いた実装に変更
_users.html.erbを作成し、そこでユーザーの詳細情報を表示するようにした

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,11 @@
 <h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
 
-<% @users.each do |user| %>
-<%= user.email %>
-<%= user.encrypted_password %>
-<%= user.remember_created_at %>
-<% end %>
+<div id="users" class="index-items">
+  <% @users.each do |user| %>
+    <div class="index-item">
+      <%= render user %>
+    </div>
+    <% end %>
+</div>
 
 <%= paginate @users %>
