--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,8 +5,8 @@
 </div>
 
 <nav class="page-nav">
-  <%= link_to t('view.common.edit'), edit_book_path(@book) %>
-  <%= link_to t('view.common.back'), books_path %>
+  <%= link_to t('view.common.edit', name: Book.model_name.human.downcase), edit_book_path(@book) %>
+  <%= link_to t('view.common.back', name: pluralize_i18n(Book.model_name.human.downcase)), books_path %>
 
-  <%= button_to t('view.common.delete'), @book, method: :delete %>
+  <%= button_to t('view.common.delete', name: Book.model_name.human.downcase), @book, method: :delete %>
 </nav>
