add: deviseの作成したテーブルに住所、郵便番号、自己紹介文を追加
追加したテーブルの内容は新規作成では要求せず、プロフィールの編集で項目が現れるようにした

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,11 +1,22 @@
 <div id="<%= dom_id user %>">
   <p>
-    <strong>ユーザー名:</strong>
+    <strong><%= User.human_attribute_name(:email) %>:</strong>
     <%= user.email %>
   </p>
+
   <p>
-    <%= user.encrypted_password %>
+    <strong><%= User.human_attribute_name(:address) %>:</strong>
+    <%= user.address %>
   </p>
-  <%= user.remember_created_at %>
+
+  <p>
+    <strong><%= User.human_attribute_name(:postal_code) %>:</strong>
+    <%= user.postal_code %>
+  </p>
+
+  <p>
+    <strong><%= User.human_attribute_name(:bio) %>:</strong>
+    <%= user.bio %>
+  </p>
 </div>
 
