--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,9 @@
 
     <p class="navbar-text float-right">
     <% if user_signed_in? %>
-      Logged in as <strong><%= current_user.email %></strong>.
-      <%= link_to "Edit profile", edit_user_registration_path, class: "navbar-link" %> |
-      <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class: "navbar-link"  %>
+      <%= t('.logged_in_as', email: current_user.email) %>
+      <%= link_to t('.edit_profile'), edit_user_registration_path, class: "navbar-link" %> |
+      <%= link_to t('.logout'), destroy_user_session_path, data: { turbo_method: :delete }, class: "navbar-link"  %>
     <% end %>
     </p>
     <%= yield %>
