--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -28,7 +28,7 @@
   <% if user.avatar.attached? %>
     <p>
       <strong><%= User.human_attribute_name(:avatar) %>:</strong>
-      <%= image_tag user.avatar, alt: user.name %>
+      <%= image_tag user.avatar.variant(resize_to_limit: [100, 100]).processed %>
     </p>
   <% end %>
 
