--- a/app/views/devise/registrations/_profile_fields.html.erb
+++ b/app/views/devise/registrations/_profile_fields.html.erb
@@ -22,3 +22,9 @@
   <%= f.label :avatar %>
   <%= f.file_field :avatar %>
 </div>
+
+<% if @user.avatar.attached? %>
+  <div class="field">
+    <%= image_tag @user.avatar.variant(resize_to_limit: [100, 100]).processed %>
+  </div>
+<% end %>
