--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -1,11 +1,11 @@
 <div id="<%= dom_id report %>">
   <p>
-    <strong>Report title:</strong>
+    <strong><%= Report.human_attribute_name(:report_title) %>:</strong>
     <%= report.report_title %>
   </p>
 
   <p>
-    <strong>Report body:</strong>
+    <strong><%= Report.human_attribute_name(:report_body) %>:</strong>
     <%= report.report_body %>
   </p>
 
