--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -12,3 +12,6 @@
     <%= link_to t('views.common.back', name: i18n_pluralize(Report.model_name.human.downcase)), reports_path %>
   <% end %>
 </div>
+
+<%= render 'comments/comment', comments: @comments %>
+<%= render 'comments/form', commentable: @report, comment: @comment %>
