--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,7 +8,7 @@
         <p><%= comment.body %></p>
       </div>
       <% if comment.user_id == current_user.id %>
-        <%= link_to t('views.common.destroy', name: Comment.model_name.human), polymorphic_path([comment.commentable, comment]), method: :delete, data: { confirm: t('views.common.delete_confirm') } %>
+        <%= button_to t('views.common.destroy', name: Comment.model_name.human), polymorphic_path([comment.commentable, comment]), method: :delete, data: { confirm: t('views.common.delete_confirm') } %>
       <% end %>
     <% end %>
   <% end %>
