--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,8 +1,10 @@
 <h1><%= t('views.common.title_show', name: Report.model_name.human) %></h1>
 
-<%= render @report %>
+<div class="show-item">
+  <%= render @report %>
+  </div>
 
-<div>
+<nav class="page-nav">
   <% if @report.user_id == current_user.id %>
     <%= link_to t('views.common.edit', name: Report.model_name.human.downcase), edit_report_path(@report) %> |
     <%= link_to t('views.common.back', name: i18n_pluralize(Report.model_name.human.downcase)), reports_path %>
@@ -11,7 +13,7 @@
   <% else %>
     <%= link_to t('views.common.back', name: i18n_pluralize(Report.model_name.human.downcase)), reports_path %>
   <% end %>
-</div>
+</nav>
 
 <%= render 'comments/comment', comments: @comments %>
 <%= render 'comments/form', commentable: @report, comment: @comment %>
