add: ページのリンクにスタイルシートを適用

--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -4,6 +4,6 @@
 
 <br>
 
-<div>
+<nav class="page-nav">
   <%= link_to t('views.common.back', name: i18n_pluralize(Report.model_name.human.downcase)), reports_path %>
-</div>
+</nav>
