--- a/app/views/reports/edit.html.erb
+++ b/app/views/reports/edit.html.erb
@@ -4,7 +4,7 @@
 
 <br>
 
-<div>
+<nav class="page-nav">
   <%= link_to t('views.common.show', name: Report.model_name.human.downcase), @report %> |
   <%= link_to t('views.common.back', name: i18n_pluralize(Report.model_name.human.downcase)), reports_path %>
-</div>
+</nav>
