--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -11,5 +11,8 @@
   <% end %>
 </div>
 
-<%= link_to t('views.common.new', name: Report.model_name.human.downcase), new_report_path %>
 <%= paginate @reports %>
+
+<nav class="page-nav">
+  <%= link_to t('views.common.new', name: Report.model_name.human.downcase), new_report_path %>
+</nav>
