--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,7 +8,10 @@
         <p><%= comment.body %></p>
       </div>
       <% if comment.user_id == current_user.id %>
-        <%= button_to t('views.common.destroy', name: Comment.model_name.human), polymorphic_path([comment.commentable, comment]), method: :delete, data: { confirm: t('views.common.delete_confirm') } %>
+        <nav class="page-nav">
+          <%= link_to t('views.common.edit', name: Comment.model_name.human), edit_polymorphic_path([@commentable, comment]) %>
+          <%= button_to t('views.common.destroy', name: Comment.model_name.human), polymorphic_path([comment.commentable, comment]), method: :delete, data: { confirm: t('views.common.delete_confirm') } %>
+        </nav>
       <% end %>
     <% end %>
   <% end %>
