add: 言及している日報の翻訳文の追加と、言及された日報がない時の表示する文を追加

--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -3,19 +3,20 @@
 <div class="show-item">
   <%= render @report %>
 </div>
-
-<h3>この日報に言及している日報</h3>
-<% if mentioned_reports = @mentioned_report.presence %>
-  <ul>
-    <% mentioned_reports.each do |mentioning_report| %>
-      <li>
-        <%= link_to mentioning_report.title, report_path(mentioning_report) %>
-      </li>
-    <% end %>
-  </ul>
-<% else %>
-
-<% end %>
+<p>
+  <strong><%= t('.mention') %>:</strong>
+  <% if mentioned_reports = @mentioned_report.presence %>
+    <ul>
+      <% mentioned_reports.each do |mentioning_report| %>
+        <li>
+          <%= link_to mentioning_report.title, report_path(mentioning_report) %>
+        </li>
+      <% end %>
+    </ul>
+  <% else %>
+    <p><%= t('.no_mentions') %>
+  <% end %>
+</p>
 
 <%= render 'shared/comments', commentable: @report %>
 
