add: 日報内のリンクを検知するためにrails_autolinkをインストールして使用

--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -6,7 +6,7 @@
 
   <p>
     <strong><%= Report.human_attribute_name(:content) %>:</strong>
-    <%= format_content report.content %>
+    <%= auto_link(format_content(report.content)) %>
   </p>
 
   <p>
