change: report_title, report_bodyをtitle, bodyに名称変更
`report_`は冗長な表現であったため、削除した

--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -12,13 +12,13 @@
   <% end %>
 
   <div>
-    <%= form.label :report_title, style: "display: block" %>
-    <%= form.text_field :report_title %>
+    <%= form.label :title, style: "display: block" %>
+    <%= form.text_field :title %>
   </div>
 
   <div>
-    <%= form.label :report_body, style: "display: block" %>
-    <%= form.text_area :report_body %>
+    <%= form.label :body, style: "display: block" %>
+    <%= form.text_area :body %>
   </div>
 
   <div>
