--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -1,12 +1,12 @@
 <div id="<%= dom_id report %>">
   <p>
-    <strong><%= Report.human_attribute_name(:report_title) %>:</strong>
-    <%= report.report_title %>
+    <strong><%= Report.human_attribute_name(:title) %>:</strong>
+    <%= report.title %>
   </p>
 
   <p>
-    <strong><%= Report.human_attribute_name(:report_body) %>:</strong>
-    <%= report.report_body %>
+    <strong><%= Report.human_attribute_name(:body) %>:</strong>
+    <%= report.body %>
   </p>
 
   <p>
